public/k8s/policy/pdm-predictor-peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: pdm-predictor-metrics-permissive
  namespace: inference
spec:
  selector:
    matchLabels:
      app: isvc.pdm-predictor
  mtls:
    mode: PERMISSIVE
