public/k8s/policy/pdm-predictor-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pdm-predictor-ingress
  namespace: inference
spec:
  podSelector:
    matchLabels:
      app: isvc.pdm-predictor
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 15008
    - from:
        - ipBlock:
            cidr: 169.254.7.127/32
      ports:
        - protocol: TCP
          port: 8080
